--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                                 <font face="arial" color="#ffffff" size="4">Contact</font>
                             </a>
                         </td>
+                        <td>
+                             <a href="#">
+                                < font face="arial" color="#ffffff" size="4">Resume</font>
+                            </a>
+                        </td>
                     </tr>
                 </table>
             </td>
