--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </a>
                         </td>
                         <td>
-                             <a href="#">
+                             <a href="#Resume">
                                 < font face="arial" color="#ffffff" size="4">Resume</font>
                             </a>
                         </td>
@@ -173,6 +173,12 @@
 
     </table>
     <!--End About-->
+     <!--Resume-->
+     <section id="Resume">
+      <h2>Resume</h2>
+      <p><a href="resume.pdf" download> Download Resume (PDF)</a></p>
+    </section>
+     <!--End Resume-->
 
     <!--Start Galary-->
     <table id="Galary" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#c2c0c3">
