--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </td>
                         <td>
                              <a href="#Resume">
-                                < font face="arial" color="#ffffff" size="4">Resume</font>
+                                <font face="arial" color="#ffffff" size="4">Resume</font>
                             </a>
                         </td>
                     </tr>
@@ -174,10 +174,21 @@
     </table>
     <!--End About-->
      <!--Resume-->
-     <section id="Resume">
-      <h2>Resume</h2>
-      <p><a href="resume.pdf" download> Download Resume (PDF)</a></p>
-    </section>
+     <table id="Resume" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#353535">
+        <tr>
+            <td>
+                <table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
+                    <!-- Heading Start-->
+                    <tr>
+                        <td height="180" align="center" valign="middle" colspan="2">
+                            <font face="arial" color="#f3971b" size="6">
+                               My Resume
+                            </font>
+                            <hr width="100" color="#f3971b">
+                            <hr>
+                            <button type="button">Resume!</button>
+                        </td>
+                    </tr>
      <!--End Resume-->
 
     <!--Start Galary-->
