--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
                                My Resume
                             </font>
                             <hr width="100" color="#f3971b">
-                            <hr>
-                            <button type="button">Resume!</button>
+                            <br>
+                            <br>
+                            <button type="button"><a href="PRIYANSHU's Resume.pdf" download> Download Resume (PDF)</a></button>
+                            
                         </td>
                     </tr>
      <!--End Resume-->
