--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </table>
     <!--End About-->
      <!--Resume-->
-     <table id="Resume" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#353535">
+     <table id="Resume" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#fffffff">
         <tr>
             <td>
                 <table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
